# mealmind

./: .editorconfig  .gitignore  IMPLEMENTATION_PLAN_PANTRY_FIRST.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  litellm-config.yaml  test_chat.py
backend/: .dockerignore  .gitignore  Dockerfile  clean_chat.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c16285044831_add_household_id_to_users.py  f6023d1ce3c5_initial_schema.py
backend/app/: config.py  llm.py  main.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/prompts/: chat_copilot.py  grocery_consolidate.py  nutrition_estimate.py  plan_gen.py  prep_sequence.py  serving_tip.py
backend/app/routers/: chat.py  grocery.py  plans.py  prep.py  profile.py  recipes.py
backend/app/schemas/: chat.py  grocery.py  plan.py  plan.py.bak  prep.py  profile.py  recipe.py
backend/app/services/: grocery.py  llm.py  nutrition.py  prep_sequencer.py  usda.py
backend/scripts/: seed_e2e.py
backend/tests/: conftest.py  test_grocery.py  test_grocery_api.py  test_health.py  test_llm.py  test_models.py  test_nutrition.py  test_plans.py  test_prep_sequencer.py  test_profile.py  test_recipes.py  test_usda.py
backend/tests/integration/: __init__.py  test_plan_generation_e2e.py
deploy/: proxmox-runbook.md
docs/: postgres-migration.md  qa-report-phase-1.md
frontend/: .env.development  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
(+94 files in other folders)
